# tg-message-cleaner

./: .gitignore  Cargo.toml  README.md  config.mjs  index.mjs  package-lock.json  package.json  pnpm-lock.yaml
src/: config.mjs  createDialogsProgressBar.mjs  index.mjs  main.rs  messagesOps.mjs  startTelegramAndLoginIfNeeded.mjs  writeToTmpFileSync.mjs
